--- a/assets/css/floating-icons.css
+++ b/assets/css/floating-icons.css
@@ -1,48 +1,48 @@
 .floating-whatsapp{
     position:fixed;
-    width:60px;
-    height:60px;
-    top:120px;
-    left:20px;
+    width:35px;
+    height:35px;
+    top:13px;
+    right:150px;
     background-color:#25d366;
     color:#FFF;
     border-radius:50px;
     text-align:center;
-    font-size:30px;
+    font-size:20px;
     box-shadow: 2px 2px 3px #999;
     z-index:100;
 }
 
 .floating-fb{
     position:fixed;
-    width:60px;
-    height:60px;
-    top:190px;
-    left:20px;
+    width:35px;
+    height:35px;
+    top:13px;
+    right:100px;
     background-color:#4267B2;
     color:#FFF;
     border-radius:50px;
     text-align:center;
-    font-size:30px;
+    font-size:20px;
     box-shadow: 2px 2px 3px #999;
     z-index:100;
 }
 
 .floating-ig{
     position:fixed;
-    width:60px;
-    height:60px;
-    top:260px;
-    left:20px;
+    width:35px;
+    height:35px;
+    top:13px;
+    right:50px;
     background-color:#833AB4;
     color:#FFF;
     border-radius:50px;
     text-align:center;
-    font-size:30px;
+    font-size:20px;
     box-shadow: 2px 2px 3px #999;
     z-index:100;
 }
 
 .float-button{
-    margin-top:16px;
+    margin-top:8px;
 }
