--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,7 +103,7 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 40px 0;
   overflow: hidden;
 }
 
@@ -1653,6 +1653,10 @@ section {
 /*--------------------------------------------------------------
 # Services Section
 --------------------------------------------------------------*/
+.services {
+  background: rgba(var(--color-secondary-rgb), 0.04);
+}
+
 .services .img {
   border-radius: 8px;
   overflow: hidden;
