--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -954,6 +954,19 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Map Section
+--------------------------------------------------------------*/
+.contact .map {
+  margin-bottom: 40px;
+}
+
+.contact .map iframe {
+  border: 0;
+  width: 100%;
+  height: 400px;
+}
+
+/*--------------------------------------------------------------
 # Features Section
 --------------------------------------------------------------*/
 .features .nav-tabs {
